--- a/packages/office-ui-fabric-react/src/components/DetailsList/DetailsRowCheck.scss
+++ b/packages/office-ui-fabric-react/src/components/DetailsList/DetailsRowCheck.scss
@@ -22,8 +22,6 @@ button.check {
 }
 
 .owner {
-  @include ms-padding-left(4px);
-
   &.isSelected,
   &.isVisible,
   &:hover,
